--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,45 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navBar {
+  list-style: none;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between; /* Centers all links except the last one */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2vh 1vw;
 }
 
-.App-link {
-  color: #61dafb;
+.navBar li:last-child {
+  margin-left: auto; /* Pushes the Login link to the right */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  background-color: #333;
+  color: #fff;
 }
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav li {
+  
+  margin-right: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;}
+
+  button {
+    margin: 2vw;
+    padding: 1vw;
+    font-size: x-large;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 25px;
+  
+}
+
